--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,9 @@
+@Misc{aesRelatedKey,
+author = {Wikipedia},
+title = {Related {K}ey {A}ttack},
+note = {\url{https://en.wikipedia.org/wiki/Related-key_attack}, Accesat februarie 2017},
+}
+
 @Misc{crossCompilation,
 author = {Free Software Foundation},
 title = {Cross-{C}ompilation},
