written the timing attacks section

--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,9 @@
+@Misc{timingAttack,
+author = {Wikipedia},
+title = {Timing Attack},
+note = {\url{https://en.wikipedia.org/wiki/Timing_attack}, Accesat februarie 2017},
+}
+
 @Misc{aesRelatedKey,
 author = {Wikipedia},
 title = {Related {K}ey {A}ttack},
