--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,11 @@
+@Misc{elfSpec,
+author = {Tool {I}nterface {S}tandard {(TIS)}},
+title = {Executable and {L}inking {F}ormat {(ELF)}},
+month = {Mai},
+year = {1995},
+note = {Versiunea 1.2},
+}
+
 @Misc{timingAttack,
 author = {Wikipedia},
 title = {Timing Attack},
